<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GlobalTemperatureFragment"
    android:orientation="vertical">

    <com.anychart.AnyChartView
        android:id="@+id/globalTemperature_graph"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:background="#F4892F"
        android:gravity="center" />

    <TextView
        android:id="@+id/globalTemperature_blurb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingMultiplier="1.5"
        android:paddingLeft="6dp"
        android:paddingTop="15dp"
        android:text="@string/globalTemperature_blurb"
        android:textAlignment="gravity"
        android:textColor="#000000"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/globalTemperature_brief"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingMultiplier="1.5"
        android:paddingLeft="6dp"
        android:paddingTop="10dp"
        android:text="@string/brief"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/globalTemperature_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingMultiplier="1.5"
        android:paddingLeft="5dp"
        android:paddingTop="15dp"
        android:text="@string/globalTemperature_summary"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="italic"/>
</LinearLayout>